Flags, MainKt moved